--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,12 @@
 {
     "presets": [
-        "env"
-    ]
+        [
+          "@babel/preset-env",
+          {
+            "useBuiltIns": "entry"
+          }
+        ]
+    ],
+    // "plugins": ["@babel/plugin-proposal-object-rest-spread"]
+
 }
