--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "graphql-yoga": "^1.16.7",
     "merge-graphql-schemas": "^1.5.8",
     "node-uuid": "^1.4.8",
     "prisma-binding": "^2.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.3",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/preset-env": "^7.3.1",
     "nodemon": "^1.18.9"
   }
 }
