--- a/prisma/prisma.yml
+++ b/prisma/prisma.yml
@@ -1,3 +1,4 @@
 endpoint: http://localhost:4466
 datamodel: datamodel.prisma
-secret: thisismysupersecrettext
+disableAuth: true
+# secret: thisismysupersecrettext
